--- a/MA615_Assignment1.rmd
+++ b/MA615_Assignment1.rmd
@@ -25,6 +25,9 @@ Given the condition that a book has an average of 2 misprints on each page, the 
 
 Poisson$(\lambda = 2)$. 
 
+![](book.png)
+
+
 \vspace{.1in}
 
 The probability pk of more than k misprints on a page is:
@@ -46,33 +49,33 @@ In the table below, the second column refers to $P(W = k)$, the third column ref
 ```{r}
 options(digits = 3)
 options(scipen = 999)
-## produce a dataframe containing $P(T = n | k = 1, 2, ..., 49)$  
+## produce a dataframe containing $P(T = n | k = 1, 2, ..., 49)$
 k <- 0:49
 prob <- as.data.frame(dpois(x = 0:49, lambda = 2)) # P(W=k)
-prob <- cbind(k,prob, cumsum(prob),1 - cumsum(prob)) ##  pk = 1 - cumulative probability = P(W>k)
-colnames(prob) <- c("k_value", "P(W=k)", "P(W>k)","pk")
+prob <- cbind(k, prob, cumsum(prob), 1 - cumsum(prob)) ##  pk = 1 - cumulative probability = P(W>k)
+colnames(prob) <- c("k_value", "P(W=k)", "P(W>k)", "pk")
 p1.table <- kable(prob)
 kable_styling(p1.table, bootstrap_options = "striped", full_width = FALSE, position = "left")
 ```
 
 \vspace{.2in}
+
 Next we need to culculate $P(T \leq n)$ for $k=0,1,...,49$)
 
 ```{r}
 options(digits = 3)
 options(scipen = 999)
-p2.table <- 0:50 
+p2.table <- 0:50
 p2.table <- as.data.frame(p2.table)
 colnames(p2.table) <- c("n")
-cp <- prob[,3]
-for (i in 1:50){
+cp <- prob[, 3]
+for (i in 1:50) {
   fc <- pbinom(q = 0:50, size = 50, prob = cp[i])
   fc <- as.data.frame(fc)
-  colnames(fc) <- i-1
-  p2.table <- cbind(p2.table, fc)  
+  colnames(fc) <- i - 1
+  p2.table <- cbind(p2.table, fc)
 }
 kable(p2.table)
-
-
 ```
-![](book.png)
+
+
