--- a/MA615_Assignment1.rmd
+++ b/MA615_Assignment1.rmd
@@ -48,10 +48,12 @@ In the table below, the second column refers to $P(W = k)$, the third column ref
 ```{r}
 options(digits = 3)
 options(scipen = 999)
-## produce a dataframe containing $P(T = n | k = 1, 2, ..., 49)$
+#produce a dataframe containing $P(T = n | k = 1, 2, ..., 49)$
 k <- 0:49
-prob <- as.data.frame(dpois(x = 0:49, lambda = 2)) # P(W=k)
-prob <- cbind(k, prob, cumsum(prob), 1 - cumsum(prob)) ##  pk = 1 - cumulative probability = P(W>k)
+#P(W=k)
+prob <- as.data.frame(dpois(x = 0:49, lambda = 2)) 
+#pk = 1 - cumulative probability = P(W>k)
+prob <- cbind(k, prob, cumsum(prob), 1 - cumsum(prob)) 
 colnames(prob) <- c("k_value", "P(W=k)", "P(W>k)", "pk")
 p1.table <- kable(prob)
 kable_styling(p1.table, bootstrap_options = "striped", full_width = FALSE, position = "left")
