--- a/MA615_Assignment1.rmd
+++ b/MA615_Assignment1.rmd
@@ -1,9 +1,19 @@
+
 ---
 title: "MA615_Assignment1"
 author: "Sky Liu"
 date: "9/17/2018"
 output: pdf_document
 ---
+
+
+![Book Prints Exercise](book.png){.callout}
+
+\raggedright
+\clearpage
+
+
+
 
 
 
@@ -49,36 +59,62 @@ In the table below, the second column refers to $P(W = k)$, the third column ref
 options(digits = 3)
 options(scipen = 999)
 #produce a dataframe containing $P(T = n | k = 1, 2, ..., 49)$
-k <- 0:49
+k <- 0:10
+k <- c(k, 48, 49)
 #P(W=k)
-prob <- as.data.frame(dpois(x = 0:49, lambda = 2)) 
+prob <- as.data.frame(dpois(x = 0:12, lambda = 2)) 
 #pk = 1 - cumulative probability = P(W>k)
 prob <- cbind(k, prob, cumsum(prob), 1 - cumsum(prob)) 
 colnames(prob) <- c("k_value", "P(W=k)", "P(W>k)", "pk")
+#from k = 10 to k = 49, the results are the same.
+prob[12,1] <- "..."
 p1.table <- kable(prob)
 kable_styling(p1.table, bootstrap_options = "striped", full_width = FALSE, position = "left")
 ```
 
-\vspace{.2in}
+\vspace{1.5in}
 
 Next we need to culculate $P(T \leq n)$ for $k=0,1,...,49$)
 
 ```{r}
 options(digits = 3)
 options(scipen = 999)
-p2.table <- 0:50
+p2.table <- 0:49
 p2.table <- as.data.frame(p2.table)
 colnames(p2.table) <- c("n")
-cp <- prob[, 3]
-for (i in 1:50) {
+cp <- prob[, 4]
+
+
+for (i in 1:11) {
   #producing columns of P(T<=n) for each k value between 0 and 49
-  fc <- pbinom(q = 0:50, size = 50, prob = cp[i]) 
+  fc <- pbinom(q = 0:49, size = 50, prob = cp[i]) 
   fc <- as.data.frame(fc)
   colnames(fc) <- i - 1
   p2.table <- cbind(p2.table, fc)
 }
-kable(p2.table)
+
+#from k = 10 to k = 49, the results are the same.
+i <- 12 
+#producing columns of P(T<=n) for each k value between 11 and 48
+fc <- pbinom(q = 0:49, size = 50, prob = cp[i]) 
+fc <- as.data.frame(fc)
+colnames(fc) <- "..."
+p2.table <- cbind(p2.table, fc)
+#producing columns of P(T<=n) for k = 49
+i<-13
+fc <- pbinom(q = 0:49, size = 50, prob = cp[i]) 
+fc <- as.data.frame(fc)
+colnames(fc) <- 49
+p2.table <- cbind(p2.table, fc)
+
+
+
+p2.table <- kable(p2.table)
+p2.table<-kable_styling(p2.table, bootstrap_options = "striped", full_width = FALSE, position = "left", font_size = 8)
+add_header_above(p2.table, c("$P(T \\\\leq n | k=0:49)$" = 13), escape = FALSE)
 ```
 
-![](book.png)
+
+
+
 
