--- a/MA615_Assignment1.rmd
+++ b/MA615_Assignment1.rmd
@@ -51,7 +51,8 @@ $P(T \leq n) =$ pbinom($n$, 50, $p_k$).
 
 \vspace{.1in}
 
-Our goal of this assignment is to produce a table that shows that $P(T = n | k = 1, 2, ..., 49)$. In order to obtain this probablity, first we need to know $pk$ for each $k$.
+Our goal of this assignment is to produce a table that shows that $P(T = n | k = 1, 2, ..., 49)$. 
+In order to obtain this probablity, first we need to know $pk$ for each $k$.
 
 In the table below, the second column refers to $P(W = k)$, the third column refers to 1 - $P(W \leq k)$ (cumsum(prob)  is the cumulative probability $P(W \leq k)$ ) 
 
@@ -69,7 +70,8 @@ colnames(prob) <- c("k_value", "P(W=k)", "P(W>k)", "pk")
 #from k = 10 to k = 49, the results are the same.
 prob[12,1] <- "..."
 p1.table <- kable(prob)
-kable_styling(p1.table, bootstrap_options = "striped", full_width = FALSE, position = "left")
+kable_styling(p1.table, bootstrap_options = "striped", 
+              full_width = FALSE, position = "left")
 ```
 
 \vspace{1.5in}
@@ -110,7 +112,8 @@ p2.table <- cbind(p2.table, fc)
 
 
 p2.table <- kable(p2.table)
-p2.table<-kable_styling(p2.table, bootstrap_options = "striped", full_width = FALSE, position = "left", font_size = 8)
+p2.table<-kable_styling(p2.table, bootstrap_options = "striped", 
+                        full_width = FALSE, position = "left", font_size = 8)
 add_header_above(p2.table, c("$P(T \\\\leq n | k=0:49)$" = 13), escape = FALSE)
 ```
 
